src/app/shared/components/items-list/items-list.scss
@use "variables" as *;

.category-wrapper {
  display: flex;
  flex-direction: column;

  .title-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 35px;
    padding-bottom: 0;
    color: $whiteText;
    text-transform: capitalize;

    h1 {
      display: inline-block;
      max-width: 100%;
      margin-bottom: 35px;
      padding: 0.12em 0.4em;
      align-self: center;
      border-radius: 4px;
      color: $whiteText;
      background: rgba(0, 0, 0, 0.4);
      backdrop-filter: brightness(0.55);
      text-shadow: 0 0 10px #000;
      @media screen and (max-width: 415px) {
        font-size: 24px;
      }
    }
  }

  .nothing-found__message {
    align-self: center;
    color: $whiteText;
  }

  .items-list {
    display: grid;
    grid-template-columns: repeat(5, 320px);
    grid-template-rows: 20px repeat(auto-fill, 1fr);
    justify-content: center;
    align-items: center;

    .see-all_row {
      display: flex;
      justify-content: flex-end;
      grid-column: 1/6;

      span {
        color: $whiteText;
        margin-bottom: 10px;
        cursor: pointer;
        outline: none;
      }
    }

    @media screen and (max-width: 1617px) {
      grid-template-columns: repeat(4, 320px);

      .see-all_row {
        grid-column: 1/5;
      }
    }
    @media screen and (max-width: 1302px) {
      grid-template-columns: repeat(3, 320px);

      .see-all_row {
        grid-column: 1/4;
      }
    }
    @media screen and (max-width: 978px) {
      grid-template-columns: repeat(4, 200px);

      .see-all_row {
        grid-column: 1/5;
      }
    }
    @media screen and (max-width: 817px) {
      grid-template-columns: repeat(3, 200px);

      .see-all_row {
        grid-column: 1/4;
      }
    }
    @media screen and (max-width: 617px) {
      grid-template-columns: repeat(2, 200px);

      .see-all_row {
        grid-column: 1/3;
      }
    }
    @media screen and (max-width: 415px) {
      grid-template-columns: repeat(3, 100px);

      .see-all_row {
        grid-column: 1/4;
      }
    }

    .details {
      display: block;
      width: 320px;
      height: 320px;
      background-size: cover;
      cursor: pointer;

      h3 {
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 0;
        text-align: center;
        color: $whiteText;
        width: 100%;
        height: 100%;
        padding: 0 5px;
        overflow: hidden;
        outline: none;
        transition: .3s ease-in-out;
        visibility: hidden;
        z-index: 3;
        @media screen and (max-width: 978px) {
          font-size: 20px;
        }
        @media screen and (max-width: 415px) {
          font-size: 10px;
        }
      }

      @media screen and (max-width: 978px) {
        height: 200px;
        width: 200px;
      }
      @media screen and (max-width: 415px) {
        height: 100px;
        width: 100px;
      }

      &:hover h3 {
        backdrop-filter: brightness(.1);
        visibility: visible;
      }
    }
  }
}

